[package]
name = "treenotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid =  {version = "1.1.1", features = ["v4"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.81"
scrawl = "1.1.0"